[gd_scene load_steps=3 format=3 uid="uid://do0wyw2uv0eo8"]

[ext_resource type="Script" uid="uid://c8tv0nn8apjgb" path="res://scenes/options_menu_scene/options_menu.gd" id="1_5mbrk"]
[ext_resource type="Script" uid="uid://dtr1sagv0h0j7" path="res://scenes/options_menu_scene/input_map_btn.gd" id="2_2v3r4"]

[node name="OptionsMenuControl" type="Control"]
process_mode = 4
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5mbrk")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1
current_tab = 3

[node name="Geral" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="VoltarMenuBtn" type="Button" parent="TabContainer/Geral"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -15.5
offset_right = 79.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Voltar para o menu
"

[node name="VoltarJogoBtn" type="Button" parent="TabContainer/Geral"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = 32.5
offset_right = 79.0
offset_bottom = 63.5
grow_horizontal = 2
grow_vertical = 2
text = "Voltar para o jogo
"

[node name="VoltarParaHubBtn" type="Button" parent="TabContainer/Geral"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = 80.5
offset_right = 79.0
offset_bottom = 111.5
grow_horizontal = 2
grow_vertical = 2
text = "Voltar para o hub"

[node name="Video" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Audio" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="AudioGeralTxt" type="TextEdit" parent="TabContainer/Audio"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4105903
anchor_top = 0.18638574
anchor_right = 0.5043403
anchor_bottom = 0.26094005
offset_right = 7.0
offset_bottom = -1.5258789e-05
grow_horizontal = 2
text = "Volume Geral"

[node name="AudioGeralSlider" type="HSlider" parent="TabContainer/Audio"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 219.99998
offset_top = -139.49998
offset_right = 220.0
offset_bottom = -123.499985
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.63023704, 0.63023704)
max_value = 1.0
value = 1.0

[node name="AudioSfxTxt" type="TextEdit" parent="TabContainer/Audio"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.37586805
anchor_top = 0.35980552
anchor_right = 0.5442708
anchor_bottom = 0.43435982
offset_top = -1.5258789e-05
grow_horizontal = 2
text = "Volume Efeitos Sonoros"
metadata/_edit_use_anchors_ = true

[node name="AudioSfxSlider" type="HSlider" parent="TabContainer/Audio"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 219.99998
offset_top = -22.5
offset_right = 220.0
offset_bottom = -6.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.63023704, 0.63023704)
max_value = 1.0
value = 1.0

[node name="AudioMusicaTxt" type="TextEdit" parent="TabContainer/Audio"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.37586805
anchor_top = 0.57050246
anchor_right = 0.5442708
anchor_bottom = 0.6450567
offset_left = 20.0
offset_top = -12.0000305
offset_right = -24.0
offset_bottom = -12.0
grow_horizontal = 2
text = "Volume da MÃºsica"

[node name="AudioMusicaSlider" type="HSlider" parent="TabContainer/Audio"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 219.99998
offset_top = 96.5
offset_right = 220.0
offset_bottom = 112.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.63023704, 0.63023704)
max_value = 1.0
value = 1.0

[node name="Controles" type="TabBar" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 3

[node name="Label" type="Label" parent="TabContainer/Controles"]
layout_mode = 0
offset_left = 325.0
offset_top = 128.0
offset_right = 491.0
offset_bottom = 333.0
size_flags_horizontal = 4
text = "Mover para cima

Mover para baixo

Mover para esquerda

Mover para a direita
"

[node name="InputMapBtnCima" type="Button" parent="TabContainer/Controles"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 54.00006
offset_top = -176.50002
offset_right = 62.00006
offset_bottom = -168.50002
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.383643, 1.383643)
script = ExtResource("2_2v3r4")
action = "up"
metadata/_custom_type_script = "uid://dtr1sagv0h0j7"

[node name="InputMapBtnBaixo" type="Button" parent="TabContainer/Controles"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 54.00006
offset_top = -123.499985
offset_right = 62.00006
offset_bottom = -115.499985
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.383643, 1.383643)
script = ExtResource("2_2v3r4")
action = "down"
metadata/_custom_type_script = "uid://dtr1sagv0h0j7"

[node name="InputMapBtnEsquerda" type="Button" parent="TabContainer/Controles"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 54.00006
offset_top = -67.5
offset_right = 62.00006
offset_bottom = -59.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.383643, 1.383643)
script = ExtResource("2_2v3r4")
action = "left"
metadata/_custom_type_script = "uid://dtr1sagv0h0j7"

[node name="InputMapBtnDireita" type="Button" parent="TabContainer/Controles"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 54.00006
offset_top = -14.5
offset_right = 62.00006
offset_bottom = -6.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.383643, 1.383643)
script = ExtResource("2_2v3r4")
action = "right"
metadata/_custom_type_script = "uid://dtr1sagv0h0j7"

[node name="Creditos" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[connection signal="pressed" from="TabContainer/Geral/VoltarMenuBtn" to="." method="_on_voltar_menu_btn_pressed"]
[connection signal="pressed" from="TabContainer/Geral/VoltarJogoBtn" to="." method="_on_voltar_jogo_btn_pressed"]
[connection signal="pressed" from="TabContainer/Geral/VoltarParaHubBtn" to="." method="_on_voltar_hub_btn_pressed"]
[connection signal="value_changed" from="TabContainer/Audio/AudioGeralSlider" to="." method="_on_audio_geral_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/AudioSfxSlider" to="." method="_on_audio_sfx_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/AudioMusicaSlider" to="." method="_on_audio_musica_slider_value_changed"]
